bk_ida/gobmkida/g1/accumulate_influence
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:664:7: error: use of undeclared identifier 'working_area_initialized_6'
if ( !working_area_initialized_6 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:666:6: error: use of undeclared identifier 'working_5'
v9 = working_5; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:669:16: error: use of undeclared identifier 'working_area_initialized_6'
while ( v9 != &working_area_initialized_6 ); 
               ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:670:1: error: use of undeclared identifier 'working_area_initialized_6'
working_area_initialized_6 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:672:1: error: use of undeclared identifier 'queue_4'
queue_4[0] = pos; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:673:1: error: use of undeclared identifier 'working_5'
working_5[pos] = strength; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:678:7: error: use of undeclared identifier 'dword_A38F3C'
v28 = dword_A38F3C[v10]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:687:7: error: use of undeclared identifier 'working_5'
v33 = working_5[v28] * inv_attenuation; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:706:7: error: use of undeclared identifier 'working_5'
v15 = working_5[v12]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:708:1: error: use of undeclared identifier 'queue_4'
queue_4[queue_end++] = v12; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:709:1: error: use of undeclared identifier 'working_5'
working_5[v12] = v15 + v14; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:741:7: error: use of undeclared identifier 'working_5'
v27 = working_5[v18]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:743:1: error: use of undeclared identifier 'queue_4'
queue_4[queue_end++] = v18; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:744:1: error: use of undeclared identifier 'working_5'
working_5[v18] = v27 + v26; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:760:7: error: use of undeclared identifier 'queue_4'
v38 = queue_4[j]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:761:7: error: use of undeclared identifier 'working_5'
v39 = working_5[v38]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/engine/influence.c:764:1: error: use of undeclared identifier 'working_5'
working_5[v38] = 0; 
^
17 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/accumulate_influence/src/obj/1/influence.o] Error 1
